--- a/debian/changelog
+++ b/debian/changelog
@@ -15,8 +15,13 @@ bubblewrap (0.4.1+git20210624-1) UNRELEASED; urgency=medium
     - Better test coverage
     - Better zsh completion
     - Drop most patches, applied upstream
+  * d/README.Debian: Clarify when a setuid bwrap was normally used
+  * d/rules: Don't install bash completion as an executable script
+  * d/p/build-Fix-installation-of-zsh-completions-in-user-specifi.patch,
+    d/p/completions-Don-t-start-bash-completion-with.patch:
+    Add patches to fix shell completions
 
- -- Simon McVittie <smcv@debian.org>  Fri, 11 Jun 2021 10:25:59 +0100
+ -- Simon McVittie <smcv@debian.org>  Mon, 28 Jun 2021 14:37:14 +0100
 
 bubblewrap (0.4.1-3) unstable; urgency=medium
 
