--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-bubblewrap (0.4.1+git20210624-1) UNRELEASED; urgency=medium
+bubblewrap (0.4.1+git20210624-1) experimental; urgency=medium
 
   * Branch for experimental
   * New upstream git snapshot
@@ -21,7 +21,7 @@ bubblewrap (0.4.1+git20210624-1) UNRELEASED; urgency=medium
     d/p/completions-Don-t-start-bash-completion-with.patch:
     Add patches to fix shell completions
 
- -- Simon McVittie <smcv@debian.org>  Mon, 28 Jun 2021 14:37:14 +0100
+ -- Simon McVittie <smcv@debian.org>  Mon, 28 Jun 2021 14:37:50 +0100
 
 bubblewrap (0.4.1-3) unstable; urgency=medium
 
