--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-bubblewrap (0.6.0-1) UNRELEASED; urgency=medium
+bubblewrap (0.6.0-1) unstable; urgency=medium
 
   * New upstream release
 
- -- Simon McVittie <smcv@debian.org>  Thu, 24 Feb 2022 14:39:27 +0000
+ -- Simon McVittie <smcv@debian.org>  Thu, 24 Feb 2022 14:39:45 +0000
 
 bubblewrap (0.5.0-1) unstable; urgency=medium
 
