--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-bubblewrap (0.6.2-1) UNRELEASED; urgency=medium
+bubblewrap (0.6.2-1) unstable; urgency=medium
 
   * New upstream release
 
- -- Simon McVittie <smcv@debian.org>  Wed, 11 May 2022 15:06:23 +0100
+ -- Simon McVittie <smcv@debian.org>  Wed, 11 May 2022 15:07:05 +0100
 
 bubblewrap (0.6.1-1) unstable; urgency=medium
 
