--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,14 @@
+bubblewrap (0.6.2-2) UNRELEASED; urgency=medium
+
+  * Standards-Version: 4.6.1 (no changes required)
+  * d/watch: Adapt to Github web page changes
+  * d/control: Add test dependencies to Build-Depends.
+    We can't run build-time tests in locked-down buildd chroots, but we can
+    run them in privileged Docker containers on Salsa-CI, which will need
+    these extra packages.
+
+ -- Simon McVittie <smcv@debian.org>  Mon, 07 Nov 2022 17:45:29 +0000
+
 bubblewrap (0.6.2-1) unstable; urgency=medium
 
   * New upstream release
