--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
-bubblewrap (0.6.2-2) UNRELEASED; urgency=medium
+bubblewrap (0.7.0-1) UNRELEASED; urgency=medium
 
+  * New upstream release
   * Standards-Version: 4.6.1 (no changes required)
   * d/watch: Adapt to Github web page changes
   * d/control: Add test dependencies to Build-Depends.
