--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+bubblewrap (0.7.0-2) unstable; urgency=medium
+
+  * d/p/test-run-Filter-out-no-new-privs-in-capsh-output.patch:
+    Add patch from upstream to fix test failure with newer capsh
+  * Update standards version to 4.6.2 (no changes needed)
+  * Remove version constraints unnecessary since buster (oldstable)
+
+ -- Simon McVittie <smcv@debian.org>  Wed, 11 Jan 2023 18:30:16 +0000
+
 bubblewrap (0.7.0-1) unstable; urgency=medium
 
   * New upstream release
