--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+bubblewrap (0.8.0-1) UNRELEASED; urgency=medium
+
+  * New upstream release
+
+ -- Simon McVittie <smcv@debian.org>  Mon, 27 Feb 2023 12:26:10 +0000
+
 bubblewrap (0.7.0-2) unstable; urgency=medium
 
   * d/p/test-run-Filter-out-no-new-privs-in-capsh-output.patch:
