--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+bubblewrap (0.9.0~git20240215-1) UNRELEASED; urgency=medium
+
+  * New upstream prerelease
+
+ -- Simon McVittie <smcv@debian.org>  Wed, 20 Mar 2024 17:20:12 +0000
+
 bubblewrap (0.8.0-2) unstable; urgency=medium
 
   * Upload to unstable.
