--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,6 @@
-bubblewrap (0.9.0~git20240215-1) UNRELEASED; urgency=medium
+bubblewrap (0.9.0-1) UNRELEASED; urgency=medium
 
-  * New upstream prerelease
+  * New upstream release
   * d/copyright: Update
   * d/p/tests-Explicitly-unshare-userns-when-testing-disable-user.patch,
     d/p/tests-Try-harder-to-evade-disable-userns.patch:
