--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-bubblewrap (0.9.0-1) UNRELEASED; urgency=medium
+bubblewrap (0.9.0-1) unstable; urgency=medium
 
   * New upstream release
   * d/copyright: Update
@@ -6,7 +6,7 @@ bubblewrap (0.9.0-1) UNRELEASED; urgency=medium
     d/p/tests-Try-harder-to-evade-disable-userns.patch:
     Drop patches that were included upstream
 
- -- Simon McVittie <smcv@debian.org>  Wed, 20 Mar 2024 17:28:39 +0000
+ -- Simon McVittie <smcv@debian.org>  Tue, 26 Mar 2024 21:16:50 +0000
 
 bubblewrap (0.8.0-2) unstable; urgency=medium
 
