--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+bubblewrap (0.9.901-1) UNRELEASED; urgency=medium
+
+  * New upstream release candidate
+    - This version adds the --[ro-]bind-fd option, which is necessary to
+      resolve CVE-2024-42472 in Flatpak without introducing a potentially
+      exploitable race condition.
+
+ -- Simon McVittie <smcv@debian.org>  Mon, 12 Aug 2024 19:18:06 +0100
+
 bubblewrap (0.9.0-1) unstable; urgency=medium
 
   * New upstream release
